// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RowLabel /> renders RowLabel 1`] = `
<div
  className="row__content--top kTeQJB"
>
  <div
    className="gPMPcW"
  >
    <div
      className="row__label row__label--mobile eDpmCe"
      data-index={0}
    >
      <div
        className="text text--dark text--primary lbLEiz gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active dlcHxL"
      data-index={0}
    >
      <div
        className="text text--dark text--primary lbLEiz gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden dlcHxL"
      data-index={0}
    >
      <div
        className="text text--dark text--primary lbLEiz gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`accent\` 1`] = `
<div
  className="row__content--top kTeQJB"
>
  <div
    className="gPMPcW"
  >
    <div
      className="row__label row__label--mobile eDpmCe"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary elFtvQ gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active dlcHxL"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary elFtvQ gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden dlcHxL"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary elFtvQ gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`alert\` 1`] = `
<div
  className="row__content--top kTeQJB"
>
  <div
    className="gPMPcW"
  >
    <div
      className="row__label row__label--mobile eDpmCe"
      data-index={0}
    >
      <div
        className="badge gYyJWD"
        color="#d93a3a"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active dlcHxL"
      data-index={0}
    >
      <div
        className="badge gYyJWD"
        color="#d93a3a"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden dlcHxL"
      data-index={0}
    >
      <div
        className="badge gYyJWD"
        color="#d93a3a"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`caution\` 1`] = `
<div
  className="row__content--top kTeQJB"
>
  <div
    className="gPMPcW"
  >
    <div
      className="row__label row__label--mobile eDpmCe"
      data-index={0}
    >
      <div
        className="badge jktpIU"
        color="#c69a22"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active dlcHxL"
      data-index={0}
    >
      <div
        className="badge jktpIU"
        color="#c69a22"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden dlcHxL"
      data-index={0}
    >
      <div
        className="badge jktpIU"
        color="#c69a22"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`neutral\` 1`] = `
<div
  className="row__content--top kTeQJB"
>
  <div
    className="gPMPcW"
  >
    <div
      className="row__label row__label--mobile eDpmCe"
      data-index={0}
    >
      <div
        className="badge imbETb"
        color="rgba(38, 38, 38, 0.65)"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active dlcHxL"
      data-index={0}
    >
      <div
        className="badge imbETb"
        color="rgba(38, 38, 38, 0.65)"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden dlcHxL"
      data-index={0}
    >
      <div
        className="badge imbETb"
        color="rgba(38, 38, 38, 0.65)"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`positive\` 1`] = `
<div
  className="row__content--top kTeQJB"
>
  <div
    className="gPMPcW"
  >
    <div
      className="row__label row__label--mobile eDpmCe"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary dZPgBK gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active dlcHxL"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary dZPgBK gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden dlcHxL"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary dZPgBK gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders opened RowLabel 1`] = `
<div
  className="row__content--top kTeQJB"
>
  <div
    className="gPMPcW"
  >
    <div
      className="row__label row__label--mobile eDpmCe"
      data-index={0}
    >
      <div
        className="text text--dark text--primary lbLEiz gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--hidden dlcHxL"
      data-index={0}
    >
      <div
        className="text text--dark text--primary lbLEiz gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--active dlcHxL"
      data-index={0}
    >
      <div
        className="text text--dark text--primary lbLEiz gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;
